# os-mcp

./: .dockerignore  .env.local  .gitignore  CHANGELOG.md  CHATGPT_INTEGRATION.md  COPILOT_INTEGRATION.md  CV1_3BZ_DEMO.md  GEMINI_INTEGRATION.md  Getting Started.md  README.md  agent.json  answer_cv1_streets.py  chatgpt_bridge.py  chatgpt_openapi.json  claude_desktop_config.json  cv1_answer.py  cv1_restaurants.py  cv1_street_search.py  debug_claude_issue.py  debug_mcp_api.py  demo_cv1_3bz.sh  diagnose_api_key.sh  dockerfile  gemini_functions.json  makefile  os-mcp-simple.yaml  os-mcp-swagger.yaml  os-mcp-vscode.code-workspace  pyproject.toml  pytest.ini  requirementsAuto.txt  rest-wrapper-swagger.yaml  rest_wrapper.py  sample.json  test_collections_cache.py  tmp_main_os_service.py
.cursor/rules/: mcp-rule.mdc
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
docs/: claude_desktop_tutorial.md  frontend_mvp.md  http_usage.md  mcp_integration.md
examples/: 01_basic_usage.py  02_location_searches.py  03_advanced_filtering.py  05_mcp_client_demo.py  README.md  examples_notebook.ipynb  requirements.txt  vscode_servers.json
frontend/: .eslintrc.cjs  README.md  eslint.config.cjs  index.html  package.json
frontend/src/: main.tsx  messages.tsx  output.tsx  store.ts  tutorial.tsx
src/: client_test.py  dev_server.py  error_envelope_schema.json  http_client_test.py  main.py  models.py  server.py  stdio_client_test.py
src/api_service/: os_api.py  os_ngd_api.py  protocols.py
src/auth/: sse_auth.py  stdio_auth.py
src/config_docs/: collection.txt  collections.txt  feature.txt  features.txt  queryables.txt  schema.txt
src/mcp_service/: guardrails.py  os_ngd_service.py  os_service.py  prompts.py  protocols.py  resources.py  routing_service.py
src/middleware/: http_middleware.py  request_id_middleware.py  sse_middleware.py  stdio_middleware.py
src/promp_templates/: prompt_templates.py
src/prompt_templates/: diagnostics.py  planning.py  prompt_templates.py  routing.py  warwickshire.py
src/utils/: error_envelope.py  logging_config.py
src/workflow_generator/: workflow_planner.py
tests/: README.md  conftest.py  test_api_client.py  test_discovery_endpoints.py  test_error_envelope.py  test_error_envelope_build.py  test_health_endpoint.py  test_mcp_service_integration.py  test_middleware.py  test_prompt_categories.py  test_request_id_logging.py  test_service_additional.py  test_warwickshire_prompts.py  test_workflow_timing.py
tests/integration/: test_http_client.py  test_stdio_client.py
