[project]
name = "os-mcp"
version = "0.1.3"
description = "A Python MCP server that provides access to Ordnance Survey's DataHub APIs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.18",
    "anthropic>=0.51.0",
    "fastapi>=0.116.1",
    "mcp>=1.12.0",
    "starlette>=0.47.1",
    "uvicorn>=0.35.0",
]
