[project]
name = "os-mcp"
version = "0.1.10"
description = "A Python MCP server that provides access to Ordnance Survey's DataHub APIs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp~=3.11.18",
    "anthropic~=0.51.0",
    "fastapi~=0.116.1",
    "mcp~=1.12.0",
    "starlette~=0.47.1",
    "uvicorn~=0.35.0",
]

[project.optional-dependencies]
test = [
    "pytest~=8.3.0",
    "pytest-asyncio~=0.23.0",
    "mypy~=1.10.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: fast unit tests",
    "integration: integration tests requiring app/network",
    "manual: manual or exploratory tests (skipped by default)",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
show_error_codes = true
exclude = ["build/", "__pycache__/", "tests/integration/"]

